Oppdater vercel.json - trigger redeploy

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
+  "version": 2,
   "buildCommand": null,
   "outputDirectory": "data/website",
   "installCommand": null,
   "framework": null,
-  "devCommand": null
+  "devCommand": null,
+  "public": true
 }
