Revise .env.example for Tesla Fleet API setup
Updated the Tesla Fleet API configuration and removed old comments.

--- a/.env.example
+++ b/.env.example
@@ -1,159 +1,38 @@
-# ============================================================
-# Ladeprioriteringssystem - Environment Configuration
-# ============================================================
-#
-# Dette er en template for .env filen.
-# Kopier denne filen til .env og oppdater verdiene.
-#
-# Kommando:
-#   cp .env.example .env
-#   nano .env
-#
-# ============================================================
-
-# ============================================================
-# Tesla Fleet API Configuration
-# ============================================================
-#
-# Få API credentials fra Tesla Developer Portal:
-# https://developer.tesla.com/
-#
-# 1. Opprett en app på Tesla Developer Portal
-# 2. Sett Redirect URI til: http://localhost:8000/callback
-# 3. Kopier Client ID og Client Secret herfra
-
-TESLA_CLIENT_ID=din_client_id_her
-TESLA_CLIENT_SECRET=din_client_secret_her
-
-# Cache fil for OAuth tokens
-TESLA_CACHE_FILE=data/tesla_cache.json
-
-# Tesla API Region
-# Velg din region basert på hvor bilen er registrert:
-#   EU - Europa (Standard for Norge)
-#   NA - Nord-Amerika
+# Tesla Fleet API Configuration (ny versjon)
+# Hent disse fra https://developer.tesla.com/
+TESLA_CLIENT_ID=e416ee82-7b17-44c7-9e8f-804da086d7ee
+TESLA_CLIENT_SECRET=ta-secret.FkjqRr2ofIAb0^ln
 TESLA_REGION=EU
 
-# ============================================================
-# Hyundai Ioniq 5 Configuration
-# ============================================================
-#
-# Ioniq 5 integrasjon via OBD-II Bluetooth (v2.0)
-# For nå er kun mock mode tilgjengelig
+# Hvor Tesla OAuth token skal lagres
+TESLA_CACHE_FILE=data/tesla_cache.json
 
-# Enable/disable Ioniq 5 monitoring
+# Ioniq 5 Configuration
 IONIQ_ENABLED=true
-
-# OBD-II Bluetooth adapter MAC address
-# Eksempel: 00:11:22:33:44:55
-# La stå tom hvis ikke brukt ennå
 IONIQ_OBD_ADDRESS=
 
-# ============================================================
-# Mock Mode Configuration
-# ============================================================
-#
-# Mock mode bruker simulerte data i stedet for ekte API/OBD-II
-# Nyttig for testing uten tilgang til bil
-#
-# true  = Bruk simulerte data (ingen API-kall)
-# false = Bruk ekte data fra Tesla/Ioniq
-
-# Tesla Mock Mode
-# true = Simulerte Tesla-data
-# false = Ekte Tesla Fleet API
-TESLA_MOCK_MODE=true
-
-# Ioniq Mock Mode
-# true = Simulerte Ioniq-data
-# false = Ekte OBD-II data
+# Application Configuration
+# Mock Mode - kontroller mock data for hver bil individuelt
+# Sett til 'true' for mock data (testing uten bil)
+# Sett til 'false' for ekte data
+TESLA_MOCK_MODE=false
 IONIQ_MOCK_MODE=true
 
-# ============================================================
-# Application Configuration
-# ============================================================
-
-# Oppdateringsintervall (minutter)
-# Hvor ofte systemet skal hente ny data fra bilene
-# Standard: 60 (hver time)
+# Hvor ofte systemet skal oppdatere batteristatus (i minutter)
 UPDATE_INTERVAL_MINUTES=60
 
-# Ladetterskel (prosent)
-# Anbefal lading når batteri er under denne verdien
-# Standard: 80
-# Range: 50-100
+# Batteriterskelen - lad ikke hvis over denne prosenten
 CHARGE_THRESHOLD_PERCENT=80
 
-# ============================================================
-# Web Server Configuration
-# ============================================================
-
-# Server Host
-# 0.0.0.0 = Tilgjengelig fra andre enheter på nettverket
-# 127.0.0.1 = Kun lokal tilgang
-HOST=0.0.0.0
-
-# Server Port
-# Standard: 8000
-PORT=8000
-
-# ============================================================
-# Database Configuration
-# ============================================================
-
-# SQLite database path
-# Relativ sti fra prosjektets rotmappe
+# Database filsti
 DATABASE_PATH=data/charging_manager.db
 
-# ============================================================
-# Logging Configuration
-# ============================================================
-
-# Log Level
-# Velg detaljnivå for logging:
-#   DEBUG - Mest detaljert (for utviklere)
-#   INFO - Normal drift (anbefalt)
-#   WARNING - Kun advarsler og feil
-#   ERROR - Kun feil
-#   CRITICAL - Kun kritiske feil
+# Logging nivå (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 LOG_LEVEL=INFO
 
-# ============================================================
-# Avanserte Innstillinger (Valgfritt)
-# ============================================================
+# Web Server Configuration
+# Host - bruk 0.0.0.0 for å tillate tilgang fra andre enheter på nettverket
+HOST=0.0.0.0
 
-# Disse kan vanligvis stå som default
-
-# Log fil rotasjon størrelse (MB)
-# LOG_FILE_MAX_BYTES=10485760
-
-# Antall backup log-filer
-# LOG_FILE_BACKUP_COUNT=3
-
-# Database cleanup alder (dager)
-# Data eldre enn dette slettes automatisk
-# DATABASE_CLEANUP_DAYS=90
-
-# ============================================================
-# Notater og Tips
-# ============================================================
-#
-# SIKKERHET:
-# - ALDRI commit .env til Git (den er i .gitignore)
-# - Hold TESLA_CLIENT_SECRET hemmelig
-# - Bytt passord hvis nøkler lekkes
-#
-# TESTING:
-# - Start med TESLA_MOCK_MODE=true for å teste uten bil
-# - Bytt til false når du har Tesla API credentials
-#
-# PRODUKSJON (Raspberry Pi):
-# - Sett TESLA_MOCK_MODE=false
-# - Sett HOST=0.0.0.0 for nettverkstilgang
-# - Bruk LOG_LEVEL=INFO for normal drift
-#
-# FEILSØKING:
-# - Sett LOG_LEVEL=DEBUG for mer detaljert logging
-# - Sjekk data/logs/app.log for feilmeldinger
-#
-# ============================================================
+# Port - standard HTTP port
+PORT=8000
