--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Tesla Fleet API Configuration (ny versjon)
 # Hent disse fra https://developer.tesla.com/
-TESLA_CLIENT_ID=e416ee82-7b17-44c7-9e8f-804da086d7ee
-TESLA_CLIENT_SECRET=ta-secret.FkjqRr2ofIAb0^ln
+TESLA_CLIENT_ID=
+TESLA_CLIENT_SECRET=
 TESLA_REGION=EU
 
 # Hvor Tesla OAuth token skal lagres
